--- a/wpf-background-widget.csproj
+++ b/wpf-background-widget.csproj
@@ -9,4 +9,8 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+        <Resource Include="Resources\**\*" />
+    </ItemGroup>
+
 </Project>
